# arc20-ts

./: README.md  arc20-ts.code-workspace  package-lock.json  package.json  pyproject.toml
projects/: package-lock.json  package.json
projects/arc20-ts/: .algokit.toml  package-lock.json  package.json
projects/arc20-ts/__test__/: ArcTwentyToken.test.ts
projects/arc20-ts/contracts/: ArcTwentyToken.algo.ts  errors.ts
projects/arc20-ts/react app/: package-lock.json  package.json
projects/arc20-ts/react app/public/: index.html  manifest.json
projects/arc20-ts/react app/src/: App.css  App.tsx
projects/arc20-ts/react app/src/components/: AdminPanel.tsx  AsaInfo.tsx  AsaInput.tsx  AsaTransfer.tsx  BalanceDisplay.tsx  ClawbackTransfer.tsx  DestroyAsa.tsx  FreezeAccount.tsx  OptInButton.tsx  OptInStatus.tsx  TokenInfo.tsx  TransactionHistory.tsx  Wallet.tsx
projects/arc20-ts/tests/: SmartASA.test.ts
projects/next app/arc20/: package-lock.json  package.json
projects/next app/arc20/app/: page.tsx
