[tool.poetry]
name = "arc20-token"
version = "0.1.0"
description = ""
authors = ["Aneesh <aneeshsharmag@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

# Disable package mode for a non-Python project
package-mode = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
